added streaming support to HttpGetWorker